    - muladdmod(a, b, c, n)    (a * b + c) % n
    - mulsubmod(a, b, c, n)    (a * b - c) % n
    - lucasumod(P,Q,k,n)       modular Lucas U value
    - lucasvmod(P,Q,k,n)       modular Lucas V value
    - lucasuvmod(P,Q,k,n)      (U(P,Q)_k mod n, V(P,Q)_k mod n)
    - lucasuv(P,Q,k)           Lucas sequence  (U(P,Q)_k, V(P,Q)_k)
    - cheb_factor              Unexported, factoring smooth p-1/p+1

    [FIXES]

    - sieve_range with tiny start and depth values could sieve one deeper
      than precisely requested.

    - is_ecpp_prime() returns 1 or 0, rather than 2 or 0.  This matches the
      documentation and other functions (e.g. bls75, miller, aks).

    - harmfrac(0) returns zero.

    - ei > 100 called euler constant with incorrect precision.

    - divmod (a,0,1) = 0, to match MPU, Pari, and Math::BigInt.
      divmod (a,1,n) = a mod n.  It was returning 0 in some cases.

    - zeta could round the last digit wrong in rare cases.

    - lucas_sequence did not always match modded lucasu and lucasv.
      Removed some unnecessary restrictions on P and Q.
      Qk=powmod(Q,k,n) wasn't true for k=0.  Fixed.
      Large IV P and P could overflow internally.  Fixed.

    - lcm(-n) now returns n instead of -n.
      znorder(a,-n) now returns znorder(a,n) instead of -n.

    - chinese uses absolute values of modulus.

    - lcm with no arguments returns 1 rather than 0.

    - sqrtmod now works with composites and uses absolute value of modulus.

    - is_carmichael for 51+ digit inputs uses random bases.  Github #34.

    - is_pseudoprime(k,base) was incorrect for some single digit k with
      non-standard base.  Github #36.

    - powreal and rootreal now return undef for cases where they would divide
      by zero or have a complex result.

    - polygonal_nth and is_polygonal accept large k.

    - addmod etc. use |n| as the modulus for negative n instead of error.

    - binomial with first argument large enough to overflow unsigned long