@@ -63,6 +63,8 @@ Revision history for Perl module Math::Prime::Util::GMP
     - lucasuvmod(P,Q,k,n)      (U(P,Q)_k mod n, V(P,Q)_k mod n)
     - lucasuv(P,Q,k)           Lucas sequence  (U(P,Q)_k, V(P,Q)_k)
     - cheb_factor              Unexported, factoring smooth p-1/p+1
+    - falling_factorial(x,n)   Factorial of x to the n falling
+    - rising_factorial(x,n)    Factorial of x to the n rising
 
     [FIXES]
 
